# szg_bizt_hf

./: .gitignore  README.md  app.py  init_db.py  prod.py
caffstore/: __init__.py  forms.py  models.py  requirements.txt  routes.py
caffstore/templates/: about.html  create_user.html  details.html  edit_caff.html  edit_user.html  edit_user_admin.html  home.html  index.html  layout.html  manage_caffs.html  manage_users.html  upload.html
caffstore/tests/: conftest.py  test_admin.py  test_not_logged_in.py  test_user.py  testutils.py
doc_parts/: arch_tervek.md
figures/: adatfolyam.drawio  adatfolyam_kulon_egyenleg.drawio  komponensdiagram.drawio  szekvenciak.mdj
instance/: store.db
parser/: .gitignore  CMakeLists.txt  README.md  lexer.c  lexer.h  main.c  reader.c  tester.py
parser/afl_test/: afl_start.sh  gif.h  lexer.c  main.cpp  my_fuzz  parser.cpp  parser.h  reader.c  reader.h
parser/afl_test/past_crashes/: id:000001,sig:11,src:000000,op:flip1,pos:85  id:000002,sig:11,src:000000,op:havoc,rep:2  id:000003,sig:11,src:000000,op:havoc,rep:2  id:000004,sig:11,src:000053,op:havoc,rep:4  id:000005,sig:11,src:000068,op:flip1,pos:85
parser/afl_test/past_crashes/iter1/: id:000000,sig:11,src:000000,op:flip1,pos:47
parser/afl_test/past_crashes/iter2/: id00  id02  id03  id:000001,sig:11,src:000048,op:arith8,pos:85,val:-29
parser/caff_examples/: 1_credits_only_eof.caff  1_credits_only_invalid_id.caff  1_credits_only_nonascii.caff  1_header_only_2.caff  1_header_only_eof.caff  1_header_only_invalid_id.caff  1_header_only_invalid_magic.caff  1_header_only_invalid_sizes.caff  1_invalid_caff_header_size.caff  1_invalid_ciff_header_size.caff  1_invalid_creator_len.caff  1_invalid_frame_sizes.caff  1_invalid_new_line_in_tags.caff  1_less_frames_specified.caff  1_more_frames_specified.caff  2_ciff_only.caff  2_credits_only.caff  2_header_only.caff  3_ciff_only.caff  3_credits_only.caff  caff_editor.py  fuzzer.caff  reader_test_no_l.caff
parser/caff_parser/: CMakeLists.txt  color_map.c  color_map.h  lexer.c  lexer.h  parser.c  parser.cpp  parser.h  reader.c  reader.h
parser/debug_demo/: CMakeLists.txt  main.c  main.cpp
parser/demo/: CMakeLists.txt  main.c
parser/include/: lexer.h
parser/source/: main.c
parser/tests/: CMakeLists.txt  hello_test.cc  lexer_test.cc  other_tests.cc  parser_test.cc  reader_test.cc  tester.py
